@@ -40,6 +40,9 @@ $rcmail_config['default_host'] = '';
 // TCP port used for IMAP connections
 $rcmail_config['default_port'] = 143;
 
+// IMAP authentication type (auth, plain) or null to use best server supported one
+$rcmail_config['imap_auth_type'] = null;
+
 // Automatically add this domain to user names for login
 // Only for IMAP servers that require full e-mail addresses for login
 // Specify an array with 'host' => 'domain' values to support multiple hosts
